<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blbl</string>
    <string name="badge_charging">充电</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_bangumi">番剧</string>
    <string name="tab_cinema">影视</string>
    <string name="tab_popular">热门</string>
    <string name="tab_bangumi_calendar">TV动画</string>
    <string name="tab_anime_movie">其他动画</string>
    <string name="tab_drama">日剧</string>
    <string name="tab_movie">电影</string>
    <string name="tab_western_drama">欧美剧</string>
    <string name="tab_chinese_drama">华语剧</string>
    <string name="tab_korean_drama">韩剧</string>
    <string name="tab_search">搜索</string>
    <string name="tab_category">分类</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_live">直播</string>
    <string name="tab_custom">自定义</string>
    <string name="tab_my">我的</string>
    <string name="custom_page_empty">当前没有可用内容</string>
    <string name="tab_settings">设置</string>
    <string name="sidebar_login">登录</string>

    <string name="my_tab_history">历史</string>
    <string name="my_tab_fav">收藏</string>
    <string name="my_tab_bangumi">追番</string>
    <string name="my_tab_drama">追剧</string>
    <string name="my_tab_toview">稍后再看</string>
    <string name="my_tab_like">最近点赞</string>

    <string name="my_need_login">该页面需要登录</string>
    <string name="my_qr_login">二维码登录</string>
    <string name="my_fav_default_title">默认收藏夹</string>
    <string name="my_fav_item_count_fmt">%1$d个内容</string>
    <string name="my_episode_section">正片剧集</string>
    <string name="my_episode_order_asc">正序</string>
    <string name="my_episode_order_desc">倒序</string>
    <string name="my_episode_order">剧集顺序</string>
    <string name="my_btn_continue">继续观看</string>
    <string name="my_btn_play">播放</string>
    <string name="my_btn_followed">已追</string>
    <string name="video_card_progress_complete">已看完</string>
    <string name="video_card_action_watch_later">添加到稍后再看</string>
    <string name="video_card_action_open_detail">进入详情页</string>
    <string name="video_card_action_open_up">进入UP主页</string>
    <string name="video_card_action_not_interested">不感兴趣</string>
    <string name="video_card_action_delete">删除</string>
    <string name="video_card_action_watch_later_done">已添加到稍后再看</string>
    <string name="video_card_action_delete_done">已删除</string>
    <string name="video_card_action_not_interested_done">将减少此类视频展示</string>
    <string name="video_card_action_open_detail_unsupported">当前卡片暂不支持进入详情页</string>
    <string name="video_card_action_missing_video_id">未获取到视频信息</string>
    <string name="video_card_action_failed">操作失败</string>
    <string name="search_clear">清空</string>
    <string name="search_backspace">后退</string>
    <string name="search_action">搜索</string>
    <string name="search_clear_history">清空搜索记录</string>
    <string name="search_tab_video">视频</string>
    <string name="search_tab_bangumi">番剧</string>
    <string name="search_tab_media">影视</string>
    <string name="search_tab_live">直播</string>
    <string name="search_tab_user">用户</string>
    <string name="search_sort_title">排序</string>
    <string name="search_sort_totalrank">综合排序</string>
    <string name="search_sort_click">最多点击</string>
    <string name="search_sort_pubdate">最新发布</string>
    <string name="search_sort_dm">最多弹幕</string>
    <string name="search_sort_stow">最多收藏</string>
    <string name="search_sort_scores">最多评论</string>
    <string name="search_sort_live_online">人气直播</string>
    <string name="search_sort_live_time">最新开播</string>
    <string name="search_sort_user_default">默认排序</string>
    <string name="search_sort_user_fans">粉丝数</string>
    <string name="search_sort_user_level">用户等级</string>
    <string name="search_user_live_actions_title">%1$s 正在直播</string>
    <string name="search_user_action_enter_live">进入直播间</string>
    <string name="search_user_action_open_profile">查看主页</string>
    <string name="search_unsupported">该分类暂未实现</string>
    <string name="search_no_results">没有找到相关结果</string>
    <string name="label_following">关注</string>
    <string name="label_follower">粉丝</string>
    <string name="label_coins">银币</string>
    <string name="label_uid_fmt">UID %1$s</string>
    <string name="label_level_fmt">等级 Lv%1$d</string>
    <string name="label_exp_fmt">经验 %1$s</string>
    <string name="action_switch_account">切换帐号</string>
    <string name="action_add_account">添加帐号</string>
    <string name="action_logout">退出登录</string>

    <string name="up_tab_archive">投稿</string>
    <string name="up_tab_collection">合集</string>
    <string name="up_tab_series">系列</string>
    <string name="up_tab_collection_series">合集和系列</string>
    <string name="up_stat_fans">粉丝</string>
    <string name="up_stat_likes">获赞</string>
    <string name="up_stat_play">播放</string>

    <string name="disclaimer_title">使用协议</string>
    <string name="disclaimer_accept">接受并继续</string>
    <string name="disclaimer_exit">退出</string>
    <string name="disclaimer_message">若要继续使用该应用需接受以下协议：\n\n本应用仅供学习交流使用，禁止用于其他用途。\n\n请在安装后的24小时内将本应用从设备中卸载，并且把APK安装文件删除。</string>

    <string name="player_btn_subtitle">字幕</string>
    <string name="player_btn_list_panel">列表</string>
    <string name="player_list_tab_page">视频列表</string>
    <string name="player_list_tab_parts">合集/分P</string>
    <string name="player_list_tab_recommend">推荐</string>
    <string name="player_list_empty">暂无内容</string>
    <string name="player_btn_comments">评论</string>
    <string name="player_btn_detail">视频详情页</string>
    <string name="player_btn_sponsor_submit">上传广告片段</string>
    <string name="player_btn_close_player">关闭播放器</string>
    <string name="player_sponsor_submit_upload">上传</string>
    <string name="player_sponsor_submit_delete">删除</string>
    <string name="player_sponsor_submit_close">关闭</string>
    <string name="player_info_intro">简介</string>
    <string name="player_info_recommend_empty">暂无推荐</string>
    <string name="player_info_desc_empty">暂无简介</string>
    <string name="player_up_quick_follow">关注</string>
    <string name="player_up_quick_followed">已关注</string>
    <string name="player_up_quick_open_profile">打开 UP 主主页</string>
    <string name="player_comment_sort">排序</string>
    <string name="player_comment_sort_hot">热门</string>
    <string name="player_comment_sort_new">最新</string>
    <string name="player_loading">加载中</string>
    <string name="player_loading_speed">加载中 %1$s/s</string>
    <string name="player_comment_loading">加载中…</string>
    <string name="player_comment_empty">暂无评论</string>
    <string name="player_comment_thread_empty">暂无更多回复</string>
    <string name="player_comment_load_failed">加载失败</string>
    <string name="player_comment_no_aid">未获取到 aid，暂不支持评论</string>
    <string name="player_comment_expand">展开</string>
    <string name="player_comment_level_accessibility">用户等级 %1$d</string>
    <string name="player_comment_level_senior_accessibility">硬核会员，用户等级 %1$d</string>
    <string name="player_touch_lock">锁定触摸</string>
    <string name="player_touch_unlock">解锁触摸</string>
    <string name="player_touch_locked">触摸已锁定</string>
    <string name="player_touch_unlocked">触摸已解锁</string>
    <string name="player_touch_boost_fmt">倍速播放 x%1$s</string>
    <string name="player_touch_brightness_fmt">亮度 %1$d%%</string>
    <string name="player_touch_volume_fmt">音量 %1$d%%</string>
</resources>
